tests/lean/print_ax2.lean.expected.out
print_ax2.lean:1:13: error: invalid namespace name 'print'
print_ax2.lean:1:25: error: invalid variables/constants/axioms declaration, ':' expected
