tests/lean/print_ax2.lean
import logic.axioms.hilbert logic.axioms.funext

print axioms
